apps/media/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: media-media-lan-only@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prowlarr.aboft.dev
      secretName: prowlarr-tls
  rules:
    - host: prowlarr.aboft.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
